--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^16.11.10",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
     "bootstrap": "^4.5.2",
     "react": "^16.13.1",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^3.4.3",
+    "typescript": "^4.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
